feat: Refactor MCP setup and enhance Claude Code configuration
Major improvements to MCP server installation, context optimization, and
Claude Code configuration management.

**MCP Server Installation**
- Replace symlink approach with CLI-based installation using `claude mcp add`
- Add setup_mcp_servers() function in lib/setup/claude.sh
- Parse .mcp/global.json with jq and execute proper commands
- Implement per-server error handling without failing entire setup
- Create .mcp/global.json with 6 global MCP servers

**Context Size Optimization**
- Remove redundant filesystem MCP server (~10-15k tokens saved)
- Retain filesystem-with-morph for AI-powered editing
- Reduce MCP tools context from ~37k to ~22-27k tokens (30-40% reduction)

**Claude Code Configuration**
- Add comprehensive Skills/Commands/Agents documentation to CLAUDE.md
- Create Usage Decision Matrix for tool selection
- Add 5 detailed usage examples
- Enhance plugin capabilities reference with emoji legend
- Fix bash PreToolUse hook jq escaping issue (stdin consumption fix)

**Serena Integration**
- Create lib/setup/serena.sh for automated Serena config management
- Set web_dashboard_open_on_launch: false preference
- Handle both new and existing Serena configs gracefully
- Integrate into apply.sh setup flow

**Documentation**
- Expand .mcp/README.md (50 → 200 lines)
- Document user-scoped vs project-scoped MCP configuration
- Explain auto-generation of project .mcp.json
- Add architecture diagrams and file structure
- Clean up old sops.yaml backup files

**Technical Details**
- Standardize indentation in lib/setup/claude.sh (spaces → tabs)
- Verify CLI syntax with official documentation
- Add user preference: "Always verify CLI tool syntax before implementing"

Related memory: mcp_setup_refactoring_2025

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ Thumbs.db
 # Nix build outputs
 .direnv/
 *Zone.Identifier
+
+# Serena configuration
+# Keep the config template and project settings, but ignore dynamic files
+.serena/
+!.serena/serena_config.yml
+!.serena/project.yml
