--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -162,7 +162,7 @@
   "explorer.compactFolders": false,
 
   // Better defaults
-  "diffEditor.ignoreTrimWhitespace": false,
+  "diffEditor.ignoreTrimWhitespace": true,
   "merge-conflict.autoNavigateNextConflict.enabled": true,
 
   // Performance
@@ -174,29 +174,30 @@
     "**/.hg/store/**": true
   },
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#70371c",
-    "activityBar.background": "#70371c",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#000000",
+    "activityBar.activeBackground": "#70bcd6",
+    "activityBar.background": "#70bcd6",
+    "activityBar.foreground": "#15202b",
+    "activityBar.inactiveForeground": "#15202b99",
+    "activityBarBadge.background": "#c639a2",
     "activityBarBadge.foreground": "#e7e7e7",
-    "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#70371c",
-    "statusBar.background": "#472312",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#70371c",
-    "statusBarItem.remoteBackground": "#472312",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#472312",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#47231299",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "commandCenter.border": "#15202b99",
+    "sash.hoverBorder": "#70bcd6",
+    "statusBar.background": "#48aacb",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#328fae",
+    "statusBarItem.remoteBackground": "#48aacb",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#48aacb",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#48aacb99",
+    "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.remoteColor": "#472312",
+  "peacock.remoteColor": "#48aacb",
   "cSpell.words": [
     "ccline",
     "markitdown",
     "modelcontextprotocol",
     "sequentialthinking"
-  ]
+  ],
+  "cmake.cmakePath": "/home/uif58593/.nix-profile/bin/cmake"
 }
