--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
-            "type": "bashdb",
-            "request": "launch",
-            "name": "Bash-Debug (simplest configuration)",
-            "program": "${file}"
-        }
+      "type": "bashdb",
+      "request": "launch",
+      "name": "Debug nix-deploy",
+      "cwd": "${workspaceFolder}/nix-deploy",
+      "program": "${workspaceFolder}/nix-deploy/bin/nix-deploy",
+      "args": ["--target", "aws"],
+      "terminalKind": "integrated"
+    }
+
     ]
 }
