--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,8 @@
 repos:
-  - repo: local
+  - repo: https://github.com/kamadorueda/alejandra
+    rev: 3e2a85506627062313e131bf8a85315f3387c8e0  # frozen: 4.0.0
+    # Choose either the 'alejandra' or 'alejandra-system' hook
+    # depending on what pre-requisites you have:
     hooks:
+      # No prerequisites
       - id: alejandra
-        name: Alejandra Nix Formatter
-        entry: nix fmt
-        language: system
-        files: \.nix$
-        pass_filenames: false
